--- a/Dior/css/Beauty.css
+++ b/Dior/css/Beauty.css
@@ -219,10 +219,10 @@ header h1{
     background-color: transparent !important;
 }
 .sec_08 .real_time ul p{
-    margin-top: 60px;
+    margin-top: 50px;
     font-size: 16px;
     font-weight: 500;
-    color: #fff;
+    color: #616161;
 }
 
 .sec_08 .re_view{
