--- a/Dior/css/accessory.css
+++ b/Dior/css/accessory.css
@@ -38,6 +38,8 @@ body {
 
 }
 .gnb3 ul{
+    width: 1200px;
+    margin: 0 auto;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
