--- a/Dior/css/fashion.css
+++ b/Dior/css/fashion.css
@@ -100,6 +100,8 @@ header h1{
 }
 
 .gnb2 ul{
+    width: 1200px;
+    margin: 0 auto;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
@@ -158,8 +160,8 @@ header h1{
     width: 100%;
     height: 950px;
     margin-top: 100px;
-    /* 포지션 */
-    position: relative;
+    /* 포지션 위치기준*/
+    /* position: relative; */
 }
 .sec_06 .sec_06_div{
     width: 1440px;
@@ -174,21 +176,26 @@ header h1{
     height: 700px;
     text-align: center;
 }
+
+.sec_06 .sec_06_div li{
+    /* 위치기준값 */
+    position: relative;
+}
 .sub{
     position: absolute;
     top: 0px;
-    left: 60px;
+    left: 0px;
     z-index: 100;
     background-color: #cccdd1;
     opacity: 1;
     /* 안보이게 */
-    /* display: none; */
+    display: none;
 }
 .sub2{
     /* 포지션 */
     position: absolute;
     top: 0px;
-    right: 60px;
+    right: 0px;
     z-index: 10;
 
     width: 700px;
