--- a/Dior/css/dior.css
+++ b/Dior/css/dior.css
@@ -96,6 +96,8 @@ header h1{
 
 }
 .gnb ul{
+    width: 1200px;
+    margin: 0 auto;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
