--- a/mobile_web/css/Profile.css
+++ b/mobile_web/css/Profile.css
@@ -22,6 +22,7 @@ video{
     background-size:auto;
     margin-top: 100px; */
     margin-top: 120px;
+    height: 450px;
 }
 
 
@@ -73,4 +74,8 @@ hr{
     font-weight: 500;
     color: #000;
     margin-bottom: 24px;
+}
+
+footer{
+    height: 100%;
 }
