--- a/mobile_web/css/Home.css
+++ b/mobile_web/css/Home.css
@@ -188,6 +188,7 @@ footer{
     padding-top: 30px;
     text-align: center;
     background-size: 100% 100%;
+    height: 100%;
     /* border-bottom: 8px solid #fff;
     border-left: 8px solid #fff;
     border-right: 8px solid #fff; */
@@ -198,6 +199,13 @@ footer{
 /* footer .copyright p{
     margin-bottom: 24px;
 } */
+
+footer img{
+    width: 128px;
+    max-width: 100%;
+    background-color: #000;
+}
+
 footer .copyright p {
     margin-top: 10px;
     color: #4c4c4c;
