--- a/mobile_web/css/Home.css
+++ b/mobile_web/css/Home.css
@@ -174,6 +174,8 @@ section .button button{
     bottom: 50px;
     z-index: 1;
     transform: translateX(-50%);
+    border: 1px solid #fff;
+
 }
 section .button button a{
     font-family: 'Arial', sans-serif;
