--- a/Dior/css/Beauty.css
+++ b/Dior/css/Beauty.css
@@ -1,114 +1,5 @@
 @charset "utf-8";
 /* 폰트크기 root 기준값 = 10px (10/16)*100 */
-html {
-    font-size: 62.5%;
-}
-body {
-    font-family: 'Noto Sans KR', sans-serif;
-}
-.w1440 {
-    max-width: 1440px;
-    /* width: 1440px; */
-    margin: 0 auto;
-}
-#wrap {
-    width: 100%;
-}
-
-
-/* Aside SNB */
-aside {
-    height: 56px;
-    background-color: #1d1c2e;
-    color: #fff;
-    font-weight: 700;
-    width: 100%;
-    min-width: 1440px;
-}
-aside .top_sub {
-    padding: 0 48px 0 52px;
-    /* 플렉스 */
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-}
-aside .top_sub p {
-    font-size: 1.4rem;
-}
-aside .top_sub>p:nth-child(1) {
-    line-height: 55px;
-    margin-left: 410px;
-}
-aside .top_sub>p:nth-child(2) {
-    line-height: 55px;
-    margin-left: -365px;
-}
-aside .top_sub>p:nth-child(2) img {
-    vertical-align: middle;
-    margin-top: -4px;
-}
-aside .top_sub>p:nth-child(3) {
-    margin-top: 18px;
-    margin-right: 54px;
-}
-aside .top_sub>p:nth-child(3) img {
-    vertical-align: middle;
-}
-
-
-/* Header */
-.logo{
-     /* 플렉스 */    
-     display: flex;
-     flex-flow: row nowrap;
-     justify-content: space-between;
-}
-.logo .logo_ul ul{
-    display: flex;
-    flex-flow: row nowrap;
-}
-.logo_ul ul li a img{
-    padding: 5px;
-}
-header h1{
-    width: 100%;
-    height: 60px;
-    margin-left: 80px;
-    line-height: 60px;
-    font-size: 30px;
-    font-weight: 400;
-    font-family: 'Uchen' ,sans-serif;
-    text-align: center;
-}
-
-
-.header_01 img{
-    max-width: 100%;
-    width: 100%;
-    height: 610px;
-}
-.gnb_div{
-    background-color: rgb(248,209,236);
-    /* margin: 0 auto; */
-    /* width: 100%;
-    min-width: 1440px; */
-}
-.gnb{
-    height: 45px;
-    line-height: 40px;
-    margin-bottom: 150px;
-
-}
-.gnb ul{
-    width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    font-size: 16px;
-    font-weight: 200;
-
-}
 
 
 /* 뷰티 */
@@ -177,6 +68,9 @@ header h1{
     /* background-color: #f5f5f5; */
     background-color: rgb(248,209,236);
     margin-top: 150px;
+    width: 100%;
+    max-width: 100%;
+
 }
 .sec_08 .real_time {
     /* 플렉스 */
@@ -227,10 +121,13 @@ header h1{
 
 .sec_08 .re_view{
     position: relative;
+    width: 800px;
+    margin: 0;
 }
 
 .sec_08 .re_view img{
-    width: 800px;
+    width: 100%;
+    max-width: 100%;
     height: 450px;
     /* 포지션 */
     position: absolute;
@@ -248,12 +145,10 @@ header h1{
 
 
 
-
-
-
 /* 세션9 */
 .sec_09{
     width: 100%;
+    min-width: 1440px;
     height: 650px;
     margin: 0 auto;
     margin-top: 150px;
@@ -271,80 +166,6 @@ header h1{
     font-size: 30px;
 }
 
-
-
-
-
-/* footer */
 footer{
-    width: 100%;
-    margin-top: 106px;
-    /* background-color: #1d1c2e; */
-    background-color: #000;
-    padding-top: 24px;
-    padding-bottom: 54px;
-    line-height: 1.5;
     margin: 0 auto;
-    min-width: 1440px;
 }
-.footer_infotmation{
-    /* 플렉스 */
-    display: flex;
-    justify-content: space-between;
-    padding-left: 72px;
-    padding-right: 68px;
-    max-width: 1440px;
-
-}
-.footer_left,
-.footer_contact{
-    margin-top: 40px;
-}
-.footer_gnb{
-    /* 플렉스 */
-    display: flex;
-    color: #eeeef0;
-    font-size: 1.4rem;
-    margin-bottom: 20px;
-}
-.footer_info{
-    font-size: 1.2rem;
-    color: #9a9c9b;
-    font-weight: 400;
-}
-.footer_escrow{
-    /* 플렉스 */
-    display: flex;
-    margin-top: 26px;
-}
-.footer_escrow span{
-    display: inline-block;
-    margin-right: 46px;
-}
-.footer_info>p:last-child{
-    margin-top: 32px;
-}
-.footer_contact{
-    color: #cccdd1;
-    font-size: 1.3rem;
-    font-weight: 400;
-    line-height: 1.6;
-}
-.footer_contact dl:first-child dt+dd{
-    font-size: 2.2rem;
-}
-.footer_contact dl:first-child dt+dd+dd{
-    font-size: 1.2rem;
-    font-weight: 300;
-    color: #a8a9ad;
-    margin-bottom: 42px;
-}
-.footer_contact dl:last-child dt+dd{
-    font-size: 1.8rem;
-    font-weight: 500;
-}
-.footer_contact dl:last-child dt+dd+dd{
-    font-size: 1.3rem;
-    color: #a4a5aa;
-}
-
