--- a/Dior/css/accessory.css
+++ b/Dior/css/accessory.css
@@ -14,6 +14,12 @@ body {
 #wrap {
     width: 100%;
 }
+
+header{
+    width: 100%;
+    min-width: 1440px;
+}
+
 .header_01 img{
     max-width: 100%;
     width: 100%;
@@ -31,7 +37,7 @@ body {
     /* width: 100%;
     min-width: 1440px; */
     height: 45px;
-    line-height: 40px;
+    line-height: 45px;
     margin-bottom: 200px;
     border-bottom: 1px solid rgb(238, 239, 220);
 
@@ -45,9 +51,20 @@ body {
     justify-content: space-between;
     font-size: 16px;
     font-weight: 200;
-
 }
 
+.gnb3 ul li{
+    width: 110px;
+    /* margin: 0 auto; */
+    text-align: center;
+}
+.gnb3 ul li:hover{
+    /* background-color: #F0D4A7; */
+    /* color: #000; */
+    background-color: #454545;
+    color: #F0D4A7;
+    cursor: pointer;
+}
 
 
 /* 메인 */
@@ -106,21 +123,22 @@ button{
 .slide1 .btn{
     margin-top: 440px;
 }
-.slide1 .btn button{
+.slide1 .btn h4{
     display: inline-block;
-    width: 120px;
+    width: 200px;
     height: 40px;
-    border: 1px solid #fff;
-    border-radius: 20px;
-    letter-spacing: -1px;
-    cursor: pointer;
+    padding: 10px;
+    font-size: 14px;
+    line-height: 14px;
+    font-weight: bold;
+    color: #454545;
+    /* border: 1px solid #fff; */
+    /* border-radius: 20px; */
+    /* letter-spacing: -1px; */
+    /* cursor: pointer; */
     background-color: transparent;
 }
-.slide1 .btn button:hover{
-    background-color: #fff;
-    color: #454545;
 
-}
 
 
 
