--- a/travel_Temlplate/css/travel.css
+++ b/travel_Temlplate/css/travel.css
@@ -107,6 +107,7 @@ body {
 .slider .slider_img img {
     max-width: 100%;
     width: 100%;
+    height: 600px;
 }
 
 /* 3-1. Display */
@@ -165,11 +166,16 @@ body {
 .work_section .work_list li a {
     display: block;
     width: 100%;
-    height: 100%;
+    height: 100%;    
+    text-align: center;
 }
 .work_section .work_list li img {
-    max-width: 100%;
+    max-width: 98%;
     width: 100%;
+    /* margin: 0 10px 0 10px auto; */
+    text-align: center;
+    margin: 0 auto;
+
 }
 
 /* 이미지 정보 효과 */
@@ -235,13 +241,17 @@ body {
 .blog_section .blog_list li {
     width: 100%;
     margin-top: 48px;
+    text-align: center;
+    /* margin: 0 auto; */
+
 }
 .blog_section .blog_list li:nth-child(1) {
     margin-top: 0;
 }
 .blog_section .blog_list li img {
-    max-width: 100%;
+    max-width: 98%;
     width: 100%;
+    text-align: center;
 }
 .blog_section .blog_list li time {
     display: block;
@@ -250,9 +260,15 @@ body {
     color: #9e9e9e;
     margin: 10px 0;
 }
+
+.blog_section .blog_list li div p{
+    font-weight: bold;
+    line-height: 1.9;
+}
 .blog_section .blog_list li h3 {
     color: #424242;
-    line-height: 1.6;
+    line-height: 1.3;
+    text-align-last: center;
 }
 
 /* 3-5. Contact */
@@ -472,23 +488,26 @@ input, textarea {
     }
     .blog_section .blog_list li {
         /* (768px) */
-        width: 242.6666666666667px;
+        /* width: 242.6666666666667px; */
+        width: 250px;
         /* (242.6666666666667/768)*100 = 31.597222222222225 */
-        width: 31.597222222222225%;
+        /* width: 31.597222222222225%; */
+        width: 32.5520%;
         /* (20/768)*100 = 2.604166666666667 */
-        margin-left: 2.604166666666667%;
+        margin-left: 0.260%;
         /* 플롯 */
         float: left;
         /* 속성값 수정 */
         margin-top: 0;
+        text-align: center;
     }
-    .blog_section .blog_list li:nth-child(1) {
+    /* .blog_section .blog_list li:nth-child(1) {
         margin-top: 0;
         margin-left: 0;
-    }
+    } */
 
     .blog_section .blog_list li img {
-        max-width: 100%;
+        max-width: 99%;
         width: 100%;
     }
     .blog_section .blog_list li time {
