--- a/travel_Temlplate/css/travel.css
+++ b/travel_Temlplate/css/travel.css
@@ -211,7 +211,7 @@ body {
     margin-bottom: 8px;
 }
 .work_section .work_list li div span {
-    font-size: 11px;
+    font-size: 16px;
     font-size: 0.6875rem;
     color: #fff;
 }
@@ -252,6 +252,7 @@ body {
     max-width: 98%;
     width: 100%;
     text-align: center;
+    padding: 20px;
 }
 .blog_section .blog_list li time {
     display: block;
